--- a/css/main.css
+++ b/css/main.css
@@ -96,9 +96,24 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+    /*Global style for headings*/
+    .title-section {
+        font-size: 24px;
+        line-height: 1.1;
+        font-weight: 300;
+        letter-spacing: 0.3px;
+        color: #f29898;
+    }
+    
+    /*Global style for paragraphs*/
+
     p {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 300;
         font-size: 16px;
         line-height: 1.5;
+        color: #613d3d;
+        margin: 0 0 25px;
     }
 
 
