--- a/css/main.css
+++ b/css/main.css
@@ -96,16 +96,11 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-/*Global style for headings*/
-.title-section {
-    font-size: 24px;
-    line-height: 1.1;
-    font-weight: 300;
-    letter-spacing: 0.3px;
-    color: #f29898;
-}
 
-/*Global style for paragraphs*/
+/*Global style*/
+body {
+    font-family: "Poppins", serif;
+}
 
 p {
     font-family: 'Poppins', sans-serif;
@@ -124,6 +119,16 @@ img {
     max-width: 100%;
 }
 
+/*Global style for headings*/
+.title-section {
+    font-size: 24px;
+    line-height: 1.1;
+    font-weight: 300;
+    letter-spacing: 0.3px;
+    color: #f29898;
+}
+
+/*Header*/
 .header {
     position: relative;
     padding: 10px 15px;
@@ -139,6 +144,18 @@ img {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    background-color: rgba(242, 152, 152, 0.95);
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    display: none;
+}
+
+.nav.open {
+    display: flex;
 }
 
 .nav-list {
@@ -154,7 +171,17 @@ img {
     list-style: none;
     padding: 0;
     margin: 0;
-}   
+}
+
+.nav-list-item {
+    margin-bottom: 45px;
+}
+
+.nav-list-item a {
+    font-size: 24px;
+    line-height: 1.2;
+    color: #fff;
+}
 
 .burger {
     display: inline-block;
@@ -165,6 +192,7 @@ img {
     z-index: 1;
     height: 25px;
     width: 35px;
+    z-index: 11;
 }
 
 .burger span,
@@ -199,10 +227,12 @@ img {
 
 .burger.open span {
     transform: translateY(-50%) rotate(45deg);
+    background-color: #fff;
 }
 
 .burger.open span:nth-child(2) {
     transform: translateY(-50%) rotate(-45deg);
+    background-color: #fff;
 }
 
 .burger.open::before,
@@ -210,10 +240,21 @@ img {
     width: 0;
 }
 
+.site-logo {
+    display: block;
+    max-width: 50px;
+}
 
-
-
-
+/*Buttons*/
+.btn {
+    font-size: 24px;
+    line-height: 1;
+    color: #613d3d;
+    display: inline-block;
+    padding: 15px 30px;
+    border: 2px solid #fff;
+    transition: 0.2s ease-out;
+}
 
 
 
