section-choose completed

--- a/css/main.css
+++ b/css/main.css
@@ -119,13 +119,101 @@ img {
     max-width: 100%;
 }
 
+.container {
+    display: block;
+    width: 100%;
+    max-width: 800px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.row {
+    margin-left: -20px;
+    margin-right: -20px;
+}
+
+@media only screen and (min-width: 576px) {
+    .container {
+        max-width: 540px;
+    }
+}
+
+@media only screen and (min-width: 767px) {
+    .container {
+        max-width: 720px;
+    }
+}
+
+@media only screen and (min-width: 992px) {
+    .container {
+        width: 86%;
+        max-width: 960px;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    .container {
+        width: 80%;
+        max-width: 1140px;
+    }
+}
+
 /*Global style for headings*/
 .title-section {
-    font-size: 24px;
-    line-height: 1.1;
+    font-size: 20px;
+    line-height: 1.2;
     font-weight: 300;
     letter-spacing: 0.3px;
     color: #f29898;
+    text-align: center;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 0 30px;
+}
+
+.title-section span {
+    padding: 0 10px;
+}
+
+.title-section::before,
+.title-section::after {
+    content: '';
+    position: relative;
+    display: none;
+    width: 55px;
+    height: 1px;
+    background-color: #ece7e7;
+}
+
+@media only screen and (min-width: 767px) {
+    .title-section::before,
+    .title-section::after {
+        display: block;
+    }
+}
+
+@media only screen and (min-width: 992px) {
+    .title-section {
+        font-size: 24px;
+        line-height: 1.1;
+        margin: 0 0 55px;
+    }
+
+    .title-section span {
+        padding: 0 12px;
+    }
+
+    .title-section::before,
+    .title-section::after {
+        width: 126px;
+    }
 }
 
 /*Header*/
@@ -187,7 +275,7 @@ img {
     display: inline-block;
     position: relative;
     position: absolute;
-    top: 15px;
+    top: 25px;
     right: 15px;
     z-index: 1;
     height: 25px;
@@ -255,7 +343,7 @@ img {
         padding: 15px 25px;
     }
 
-    .header .container {
+    .header-container {
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -328,12 +416,16 @@ img {
     background-size: cover;
     background-position: 50% 50%;
     background-repeat: no-repeat;
-    min-height: 70vh;
+    min-height: 300px;
+    padding: 45px 0;
     text-align: center;
     position: relative;
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
 }
 
-.section-her-slide::before {
+.section-hero-slide::before {
     content: '';
     position: absolute;
     top: 0;
@@ -341,17 +433,50 @@ img {
     width: 100%;
     height: 100%;
     background-color: #1c2425;
-    opacity: 0.5;
+    opacity: 0.3;
     z-index: 0;
 }
 
 .section-hero-slide-content {
     position: relative;
     z-index: 1;
+    padding: 0 15px;
 }
 
-.section-hero .slick-arrow {
-    display: none;
+.section-hero__pretitle {
+    font-size: 16px;
+    line-height: 1;
+    position: relative;
+    font-weight: 400;
+    color: #fff;
+    text-transform: uppercase;
+    padding-bottom: 15px;
+}
+
+.section-hero__pretitle::after {
+    content: '';
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    transform: translateX(-50%);
+    height: 3px;
+    width: 60px;
+    background-color: #f29898;
+}
+
+.section-hero__title {
+    font-family: 'Rochester';
+    font-size: 40px;
+    line-height: 1;
+    font-weight: 400;
+    color: #fff;
+    margin: 20px 0 30px;
+}
+
+.slick-arrow {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -366,15 +491,15 @@ img {
     cursor: pointer;
 }
 
-.section-hero .slick-arrow:focus {
+.slick-arrow:focus {
     outline: none;
 }
 
-.section-hero .slick-arrow:hover::before {
+.slick-arrow:hover::before {
     color: #f29898;
 }
 
-.section-hero .slick-arrow::before {
+.slick-arrow::before {
     font-family: 'icomoon';
     font-size: 44px;
     color: #fff;
@@ -383,32 +508,36 @@ img {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    transform: 0.2s ease-in-out;
+    transition: 0.2s ease-in-out;
 }
 
 .section-hero .slick-prev {
-    left: 8%;
+    left: 4%;
 }
 
-.section-hero .slick-prev::before {
+.slick-prev::before {
     content: "\e909";
 }
 
 .section-hero .slick-next {
-    right: 8%;
+    right: 4%;
 }
 
-.section-hero .slick-next::before {
+.slick-next::before {
     content: "\e908";
 }
 
-.slick-dots  {
+.slick-dots {
     display: flex;
     align-items: center;
     justify-content: center;
     position: absolute;
-    bottom: 30px;
+    bottom: 10px;
     left: 50%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    transform: translateX(-50%);
     padding: 0;
 }
 
@@ -435,53 +564,272 @@ img {
     background-color: #f29898;
 }
 
-.slick-dots li.slick-active button:focus {
+.slick-dots button:focus {
+    outline: none;
+}
+
+.slick-slide:focus {
     outline: none;
 }
 
 @media only screen and (min-width: 767px) {
-    .section-hero .slick-arrow {
-        display: block;
+    .section-hero-slide {
+        min-height: 400px;
+    }
+
+    .section-hero__pretitle {
+        font-size: 20px;
+    }
+
+    .section-hero__title {
+        font-size: 50px;
+        margin: 20px 0 40px;
+    }
+
+    .slick-dots {
+        bottom: 15px;
     }
 }
 
+@media only screen and (min-width: 992px) {
+    .section-hero-slide {
+        min-height: 70vh;
+    }
 
-/*Choose one for you*/
-.section-choose-title {
-    text-align: center;
+    .section-hero__title {
+        font-size: 75px;
+        margin: 20px 0 8.7vh;
+    }
+
+    .slick-dots li {
+        margin: 0 10px;
+    }
+
+    .slick-dots button {
+        width: 15px;
+        height: 15px;
+    }
+
+}
+
+@media only screen and (min-width: 1450px) {
+    .section-hero__title {
+        font-size: 100px;
+    }
+
+    .section-hero .slick-prev {
+        left: 8%;
+    }
+
+    .section-hero .slick-next {
+        right: 8%;
+    }
+}
+
+/*Choose choose*/
+.section-choose {
+    padding: 45px 0;
+}
+
+.section-choose .container {
+    width: auto;
+}
+
+.section-choose-box {
+    width: 25%;
+    padding: 0 20px;
+}
+
+.section-choose-box:hover img {
+    transform: scale(1.05);
+}
+
+.section-choose-box:hover .section-choose-img::before {
+    opacity: 0.7;
+    visibility: visible;
+}
+
+.section-choose-box:hover .section-choose-img-text {
+    opacity: 1;
+    visibility: visible;
+}
+
+.section-choose-box:hover .section-choose-text h4 {
+    color: #f29898;
+}
+
+.section-choose-slider {
+    position: relative;
+}
+
+.section-choose-slider .slick-arrow::before {
+    color: #c5c5c5;
+}
+
+.section-choose-slider .slick-arrow:hover::before {
+    color: #f29898;
+}
+
+.section-choose-slider .slick-prev {
+    left: -35px;
+}
+
+.section-choose-slider .slick-next {
+    right: -35px;
+}
+
+.section-choose-slider .slick-dots {
+    bottom: -40px;
+}
+
+.section-choose-slider .slick-dots button {
+    background-color: #613d3d;
+}
+
+.section-choose-img {
+    margin-bottom: 10px;
+    position: relative;
+    overflow: hidden;
+}
+
+.section-choose-img img {
+    width: 100%;
+    transition: 0.2s ease-in-out;
+}
+
+.section-choose-img::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #e28f90;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 1;
+    transition: 0.2s ease-in-out;
+}
+
+.section-choose-img-text {
+    font-size: 15px;
+    font-weight: 700;
+    color: #fff;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    visibility: hidden;
+    z-index: 2;
+    transition: 0.2s ease-in-out;
+}
+
+.section-choose-text h4 {
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.1;
+    color: #613d3d;
+    margin-top: 0;
+    margin-bottom: 10px;
+    transition: 0.2s ease-in-out;
+}
+
+.section-choose-text p {
+    margin-bottom: 10px;
+}
+
+.section-choose-text span {
+    font-size: 17px;
+    line-height: 1.1;
+    font-weight: 500;
+    color: #f29898;
+    display: block;
+}
+
+@media only screen and (min-width: 992px) {
+    .section-choose {
+        padding: 75px 0;
+    }
+
+    .section-choose-img {
+        margin-bottom: 20px;
+    }
+
+    .section-choose-text h4 {
+        font-size: 20px;
+        margin-bottom: 15px;
+    }
+
+    .section-choose-img-text {
+        font-size: 20px;
+    }
+
+    .section-choose-text span {
+        font-size: 26px;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    .section-choose-slider .slick-prev {
+        left: -64px;
+    }
+
+    .section-choose-slider .slick-next {
+        right: -64px;
+    }
+}
+
+/*Section About*/
+.section-about {
+    padding: 75px 0;
+}
+
+.section-about-holder {
     display: -webkit-flex;
     display: -moz-flex;
     display: -ms-flex;
     display: -o-flex;
     display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
-.section-choose-title span {
-    padding: 0 12px;
-}
-
-.section-choose-title::before,
-.section-choose-title::after {
-    content: '';
+.section-about-box {
+    width: 50%;
+    padding: 0 20px;
     position: relative;
-    width: 126px;
-    height: 1px;
-    background-color: #ece7e7;
 }
 
+.section-about-text-img {
+    max-width: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
 
 
 /*Buttons*/
 .btn {
     font-size: 24px;
     line-height: 1;
+    text-transform: uppercase;
     color: #613d3d;
+    font-weight: 300;
+    letter-spacing: 0.05em;
     display: inline-block;
     padding: 15px 30px;
     border: 2px solid #fff;
     transition: 0.2s ease-out;
+}
+
+.btn.btn-solid {
+    font-size: 18px;
+    background-color: #f29898;
+    border-color: #f29898;
+    color: #fff;
 }
 
 @media only screen and (min-width: 992px) {
@@ -492,9 +840,18 @@ img {
         border: 2px solid #f29898;
     }
 
+    .btn.btn-solid {
+        font-size: 24px;
+    }
+
     .btn:hover {
         color: #fff;
         background-color: #f29898;
+    }
+
+    .btn-solid:hover {
+        color: #f29898;
+        background-color: #fff;
     }
 }
 
