--- a/css/main.css
+++ b/css/main.css
@@ -102,13 +102,17 @@ body {
     font-family: "Poppins", serif;
 }
 
+* {
+    box-sizing: border-box;
+}
+
 p {
     font-family: 'Poppins', sans-serif;
     font-weight: 300;
-    font-size: 16px;
-    line-height: 1.5;
+    font-size: 15px;
+    line-height: 1.3;
     color: #613d3d;
-    margin: 0 0 25px;
+    margin: 0 0 15px;
 }
 
 a {
@@ -150,6 +154,12 @@ img {
     .container {
         width: 86%;
         max-width: 960px;
+    }
+
+    p {
+        font-size: 16px;
+        line-height: 1.5;
+        margin: 0 0 25px;
     }
 }
 
@@ -631,10 +641,6 @@ img {
     padding: 45px 0;
 }
 
-.section-choose .container {
-    width: auto;
-}
-
 .section-choose-box {
     width: 25%;
     padding: 0 20px;
@@ -715,6 +721,7 @@ img {
     color: #fff;
     letter-spacing: 0.05em;
     text-transform: uppercase;
+    white-space: nowrap;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -749,7 +756,7 @@ img {
 
 @media only screen and (min-width: 992px) {
     .section-choose {
-        padding: 75px 0;
+        padding: 75px 0 35px;
     }
 
     .section-choose-img {
@@ -782,7 +789,7 @@ img {
 
 /*Section About*/
 .section-about {
-    padding: 75px 0;
+    padding: 35px 0;
 }
 
 .section-about-holder {
@@ -791,16 +798,27 @@ img {
     display: -ms-flex;
     display: -o-flex;
     display: flex;
+    -webkit-flex-wrap: wrap;
+    -moz-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    -o-flex-wrap: wrap;
+    flex-wrap: wrap;
 }
 
 .section-about-box {
-    width: 50%;
+    width: 100%;
     padding: 0 20px;
     position: relative;
+    margin-bottom: 30px;
+}
+
+ .section-about-box:last-of-type {
+    margin-bottom: 0;
 }
 
 .section-about-text-img {
-    max-width: 50%;
+    max-width: 80%;
+    max-height: 90%;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -808,6 +826,21 @@ img {
     -ms-transform: translate(-50%, -50%);
     -o-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+}
+
+@media only screen and (min-width: 992px) {
+    .section-about-holder {
+        -webkit-flex-wrap: nowrap;
+        -moz-flex-wrap: nowrap;
+        -ms-flex-wrap: nowrap;
+        -o-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    }
+
+    .section-about-box {
+        width: 50%;
+        margin-bottom: 0;
+    }
 }
 
 
