--- a/css/main.css
+++ b/css/main.css
@@ -843,6 +843,194 @@ img {
     }
 }
 
+/*Section gallery*/
+.section-gallery {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.section-tabs {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    -moz-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    -o-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-bottom: 25px;
+}
+
+.section-tabs a {
+    font-size: 17px;
+    line-height: 1;
+    font-weight: 400;
+    color: #613d3d;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 10px 25px;
+    border: 2px solid #f29898;
+    margin: 0 0 20px 0;
+}
+
+.section-tabs a:nth-of-type(4n + 4) {
+    margin-right: 0;
+}
+
+.section-tabs a.active {
+    background-color: #f29898;
+    color: #fff;
+}
+
+.section-images {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    -moz-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    -o-flex-wrap: wrap;
+    flex-wrap: wrap;
+    display: none;
+}
+
+.section-images.active {
+    display: flex;
+}
+
+.section-images-link {
+    display: inline-block;
+    position: relative;
+    width: 47%;
+    margin-right: 5.3%;
+    margin-bottom: 25px;
+    overflow: hidden;
+}
+
+.section-images-link img {
+    transition: 0.2s ease-in-out;
+}
+
+.section-images-link::before {
+    content: "\e904";
+    position: absolute;
+    font-family: 'icomoon';
+    font-size: 60px;
+    color: #fff;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.2s ease-in-out;
+}
+
+.section-images-link::after {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background-color: #37d6d6;
+    z-index: 1;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.2s ease-in-out;
+}
+
+.section-images-link:hover img {
+    transform: scale(1.05);
+}
+
+.section-images-link:hover::before {
+    opacity: 1;
+    visibility: visible;
+}
+
+.section-images-link:hover::after {
+    opacity: 0.5;
+    visibility: visible;
+}
+
+.section-images-link:nth-of-type(2n + 2) {
+    margin-right: 0;
+}
+
+.section-images-link:nth-of-type(4n + 4) {
+    margin-right: 0;
+}
+
+.section-images-link img {
+    width: 100%;
+}
+
+
+@media only screen and (min-width: 992px) {
+    .section-gallery {
+        padding-top: 40px;
+        padding-bottom: 60px;
+    }
+
+    .section-tabs {
+        margin-bottom: 50px;
+    }
+
+    .section-tabs a {
+        font-size: 20px;
+        width: 21%;
+        padding: 17px 25px;
+        margin-right: 5.3%;
+        transition: 0.2s ease-out;
+    }
+
+    .section-tabs a:hover {
+        background-color: #f29898;
+        color: #fff;
+    }
+
+    .section-images-link {
+        margin-bottom: 60px;
+    }
+
+    .section-images-link {
+        display: inline-block;
+        position: relative;
+        width: 21%;
+        margin-right: 5.3%;
+        margin-bottom: 25px;
+    }
+
+    .section-images-link:nth-of-type(2n + 2) {
+        margin-right: 5.3%;
+    }
+
+    .section-images-link:nth-of-type(4n + 4) {
+        margin-right: 0;
+    }
+
+}
+
+/*@media only screen and (min-width: 767px) {
+    .section-tabs a {
+        width: 47.3%;
+        padding: 10px 25px;
+        margin-right: 5.3%;
+    }
+
+    .section-tabs a:nth-of-type(2n + 2) {
+        margin-right: 0;
+    }
+}*/
+
 /*Section Testimonials*/
 .section-testimonials {
     padding-top: 30px;
