--- a/css/main.css
+++ b/css/main.css
@@ -426,7 +426,7 @@ img {
     background-size: cover;
     background-position: 50% 50%;
     background-repeat: no-repeat;
-    min-height: 300px;
+    min-height: 330px;
     padding: 45px 0;
     text-align: center;
     position: relative;
@@ -1295,6 +1295,276 @@ img {
 
     .follow-us-holder {
         justify-content: flex-start;
+    }
+}
+
+/*Popup*/
+body.popup-is-opened {
+    overflow: hidden;
+}
+
+.popup-wrapper::before {
+    content: '';
+    height: 100%;
+    width: 100%;
+    display: block;
+    background-color: rgba(0, 0, 0, 0.6);
+    transition: 0.2s ease-in-out;
+    z-index: 11;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    visibility: hidden;
+}
+.popup-wrapper.popup-open::before {
+    opacity: 1;
+    visibility: visible;
+}
+
+.popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    z-index: 12;
+    background-color: #fff;
+    width: 96%;
+    max-width: 870px;
+    padding: 40px 25px;
+    max-height: 90vh;
+    overflow: auto;
+    display: none;
+}
+
+.popup.open {
+    display: block;
+}
+
+.popup-holder {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    -webkit-flex-direction: column;
+    -moz-flex-direction: column;
+    -ms-flex-direction: column;
+    -o-flex-direction: column;
+    flex-direction: column;
+    width: 100%;
+    max-width: 545px;
+    margin: 0 auto;
+}
+
+.popup-close {
+    position: absolute;
+    height: 25px;
+    width: 25px;
+    top: 20px;
+    right: 20px;
+    display: block;
+}
+
+.popup-close::before,
+.popup-close::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%) rotate(45deg);
+    -ms-transform: translate(-50%, -50%) rotate(45deg);
+    -o-transform: translate(-50%, -50%) rotate(45deg);
+    transform: translate(-50%, -50%) rotate(45deg);
+    height: 25px;
+    width: 2px;
+    background-color: #e3cece;
+    transition: 0.2s ease-in-out;
+}
+
+.popup-close::after {
+    -webkit-transform: translate(-50%, -50%) rotate(-45deg);
+    -ms-transform: translate(-50%, -50%) rotate(-45deg);
+    -o-transform: translate(-50%, -50%) rotate(-45deg);
+    transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+.popup-close:hover::before,
+.popup-close:hover::after {
+    background-color: #f29898;
+}
+
+.popup-title {
+    font-size: 19px;
+    font-weight: 500;
+    line-height: 1;
+    color: #613d3d;
+    text-align: center;
+    text-transform: uppercase;
+    margin-top: 15px;
+    width: 100%;
+}
+
+.form-group-title {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1;
+    color: #613d3d;
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 15px;
+    width: 100%;
+}
+
+form {
+    padding-top: 25px;
+    width: 100%;
+}
+
+input:not(.btn-submit),
+select,
+textarea {
+    padding: 8px 12px;
+    line-height: 1;
+    font-size: 14px;
+    font-weight: 500;
+    color: #613d3d;
+    border: 1px solid #e4d0cf;
+    transition: 0.2s ease-in-out;
+}
+
+input:not(.btn-submit),
+select {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 10px;
+}
+
+input:not(.btn-submit):focus,
+select:focus,
+textarea:focus {
+    outline: none;
+    border-color: #f29898;
+}
+
+input:not(.btn-submit):nth-of-type(even),
+select:nth-of-type(even) {
+    margin-right: 0;
+}
+
+input:not(.btn-submit)::placeholder,
+textarea::placeholder {
+    font-weight: 300;
+    color: #e4d0cf;
+}
+
+input:not(.btn-submit):-ms-input-placeholder,
+textarea:-ms-input-placeholder {
+    font-weight: 300;
+    color: #e4d0cf;
+}
+
+input:not(.btn-submit)::-ms-input-placeholder,
+textarea::-ms-input-placeholder {
+    font-weight: 300;
+    color: #e4d0cf;
+}
+
+select option {
+    padding: 10px;
+}
+
+textarea {
+    width: 100%;
+    height: 150px;
+    line-height: 1.2;
+}
+
+.btn-submit {
+    font-size: 20px;
+    line-height: 1;
+    color: #fff;
+    font-weight: 400;
+    text-align: center;
+    border: 2px solid #f29898;
+    background-color: #f29898;
+    padding: 12px 13px;
+    transition: 0.2s ease-in-out;
+    margin-top: 15px;
+}
+
+.btn-submit:hover {
+    color: #f29898;
+    background-color: #fff;
+}
+
+form div {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    -moz-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    -o-flex-wrap: wrap;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-bottom: 10px;
+}
+
+@media only screen and (min-width: 992px) {
+    .popup {
+        max-height: initial;
+        overflow: visible;
+    }
+
+    .popup-title {
+        font-size: 24px;
+    }
+
+    .form-group-title {
+        font-size: 18px;
+        margin-bottom: 25px;
+    }
+
+    form {
+        padding-top: 35px;
+    }
+
+    form div {
+        padding-bottom: 18px;
+    }
+
+    input:not(.btn-submit),
+    select,
+    textarea {
+        padding: 16px 19px;
+    }
+
+    input:not(.btn-submit),
+    select {
+        width: 48%;
+        margin-right: 4%;
+        margin-bottom: 20px;
+    }
+
+    input:not(.btn-submit):focus,
+    textarea:focus {
+        padding-left: 25px;
+    }
+
+    .btn-submit {
+        margin-top: 30px;
     }
 }
 
