--- a/css/main.css
+++ b/css/main.css
@@ -1330,10 +1330,10 @@ body.popup-is-opened {
     position: fixed;
     top: 50%;
     left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    -o-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%) scale(1.3);
+    -ms-transform: translate(-50%, -50%) scale(1.3);
+    -o-transform: translate(-50%, -50%) scale(1.3);
+    transform: translate(-50%, -50%) scale(1.3);
     z-index: 12;
     background-color: #fff;
     width: 96%;
@@ -1341,11 +1341,18 @@ body.popup-is-opened {
     padding: 40px 25px;
     max-height: 90vh;
     overflow: auto;
-    display: none;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.2s ease-in-out;
 }
 
 .popup.open {
-    display: block;
+    opacity: 1;
+    visibility: visible;
+    -webkit-transform: translate(-50%, -50%) scale(1);
+    -ms-transform: translate(-50%, -50%) scale(1);
+    -o-transform: translate(-50%, -50%) scale(1);
+    transform: translate(-50%, -50%) scale(1);
 }
 
 .popup-holder {
